add --enable-preview to run scripts